# tirith

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-COMMERCIAL  README.md  SECURITY.md  SKILL.md  TIRITH.md  action.yml  deny.toml  flake.nix  threatdb-manifest.json
.cargo/: audit.toml
.claude/: settings.json
.cursor/: mcp.json
.github/: FUNDING.yml  dependabot.yml
crates/slopsquatscan/: Cargo.toml
crates/slopsquatscan/src/: main.rs  output.rs  registry.rs
crates/tirith/: Cargo.toml
crates/tirith-core/: Cargo.toml  build.rs
crates/tirith-core/assets/data/: credential_patterns.toml  known_domains.csv  ocr_confusions.tsv  popular_packages.csv  prompt_injection_seeds.txt  rule_explanations.toml  sensitive_env.toml  text_confusables.txt
crates/tirith-core/benches/: perf.rs
crates/tirith-core/src/: agent_origin.rs  aliases.rs  approval.rs  audit.rs  audit_aggregator.rs  audit_tune.rs  audit_upload.rs  baseline.rs  blast_radius.rs  canary.rs  checkpoint.rs  clipboard.rs  command_card.rs  commands_manifest.rs  context_detect.rs  custom_rule_dsl.rs  dashboard.rs  data.rs  deobfuscate.rs  dep_confusion.rs  devcontainer_writer.rs  ecosystem_scan.rs  engine.rs  env_guard.rs  escalation.rs  event_buffer.rs  exec_provenance.rs  extract.rs  homoglyph.rs  hygiene.rs  iac_plan.rs  incident.rs  install_script_analysis.rs  install_txn.rs  intent.rs  lib.rs  license.rs  location.rs  lsp_profiles.rs  mcp_lock.rs  (+43 more)
crates/tirith-core/src/artifact/: archive.rs  correlate.rs  firewall.rs  inspect.rs  install.rs  mod.rs  native.rs  pth.rs  quarantine.rs  record.rs  release_diff.rs  resolver.rs  wheel.rs
crates/tirith-core/src/capsule/: linux.rs  macos.rs  mod.rs  windows.rs
crates/tirith-core/src/mcp/: content.rs  dispatcher.rs  mod.rs  origin.rs  output_filter.rs  resources.rs  response_inspect.rs  tools.rs  types.rs
crates/tirith-core/src/network/: dns.rs  mod.rs  shorturl.rs
crates/tirith-core/src/provenance/: graph.rs  mod.rs  pypi_integrity.rs
crates/tirith-core/src/rules/: aifile.rs  cifile.rs  cloaking.rs  codefile.rs  command.rs  configfile.rs  container.rs  context.rs  credential.rs  custom.rs  ecosystem.rs  environment.rs  exfil.rs  hostname.rs  iac.rs  install.rs  mcpdrift.rs  mod.rs  output.rs  paste_provenance.rs  path.rs  powershell.rs  prompt_injection.rs  rendered.rs  shared.rs  ssh_context.rs  sudo.rs  terminal.rs  threatintel.rs  transport.rs
crates/tirith-core/tests/: bypass_regression.rs  generate_test_fixtures.rs  golden_fixtures.rs  policy_integration.rs  safe_command_integration.rs
crates/tirith/assets/: lab_corpus.toml
crates/tirith/assets/configs/: tirith-gateway.yaml
crates/tirith/assets/hooks/: copilot-cli-hook.py  cursor-hook.sh  kiro-hook.py  openclaw-tirith-guard.ts  tirith-check.py  tirith-guard.ts  tirith-security-guard-gemini.py  vscode-hook.sh  windsurf-hook.sh  zshenv-guard.zsh
crates/tirith/assets/keys/: threatdb-verify.pub
crates/tirith/assets/lab_artifacts/: README.md  loader_cross_dist.pth  pth_benign_editable.pth  pth_cross_runtime.pth  pth_subprocess.pth
crates/tirith/assets/policy_templates/: ai-agent-heavy.yaml  ci-strict.yaml  enterprise.yaml  individual.yaml  mcp-strict.yaml  oss-maintainer.yaml  startup.yaml
crates/tirith/assets/shell/lib/: bash-hook.bash  fish-hook.fish  nushell-hook.nu  powershell-hook.ps1  zsh-hook.zsh
crates/tirith/src/: assets.rs  main.rs
crates/tirith/src/cli/: agent.rs  ai.rs  aliases.rs  audit.rs  baseline.rs  bash_capability.rs  browser.rs  browser_host.rs  canary.rs  capsule.rs  capsule_child.rs  capsule_proxy.rs  capsule_windows.rs  check.rs  checkpoint.rs  clipboard.rs  codespaces.rs  command_card.rs  commands.rs  completions.rs  context.rs  daemon.rs  dashboard.rs  devcontainer.rs  diff.rs  doctor.rs  ecosystem.rs  env_guard.rs  exec.rs  explain.rs  fetch.rs  fix.rs  gateway.rs  hook_event.rs  hooks.rs  hygiene.rs  iac.rs  incident.rs  init.rs  install.rs  (+46 more)
crates/tirith/src/cli/setup/: fs_helpers.rs  fs_helpers_windows.rs  merge.rs  mod.rs  shell_profile.rs  tools.rs  zshenv.rs
crates/tirith/tests/: bash_hook_exports.rs  bash_preexec_enforce.rs  cli_integration.rs  help_snapshots.rs  lab_artifact_scenarios.rs  registry_api_integration.rs  shell_conformance.rs
crates/tirith/tests/pty_support/: mod.rs
crates/tirith/tests/snapshots/: help_snapshots__help_audit.snap  help_snapshots__help_check.snap  help_snapshots__help_checkpoint.snap  help_snapshots__help_daemon.snap  help_snapshots__help_diff.snap  help_snapshots__help_doctor.snap  help_snapshots__help_explain.snap  help_snapshots__help_fetch.snap  help_snapshots__help_gateway.snap  help_snapshots__help_init.snap  help_snapshots__help_license.snap  help_snapshots__help_mcp_server.snap  help_snapshots__help_paste.snap  help_snapshots__help_policy.snap  help_snapshots__help_receipt.snap  help_snapshots__help_root.snap  help_snapshots__help_run.snap  help_snapshots__help_scan.snap  help_snapshots__help_score.snap  help_snapshots__help_setup.snap  help_snapshots__help_threat_db.snap  help_snapshots__help_trust.snap  help_snapshots__help_warnings.snap  help_snapshots__help_why.snap
docs/: agent-governance-design.md  browser-native-messaging.md  canary-formats.md  capability-manifest.toml  capability-matrix.md  capsule.md  compatibility.md  cookbook.md  dogfood-guide.md  homebrew-core.md  lsp-profiles.md  mcp-output-filter.md  paste-provenance.md  prompt-integration.md  prompt-status.md  roadmap.md  security.md  shell-hook-conformance.md  threat-model.md  threatdb-v2-rollout.md  troubleshooting.md  uninstall.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: artifact_wheel.rs
scripts/: codex-upgrade-smoke.sh  (+1 more)
tools/license-server/: Cargo.toml
tools/license-server/src/: config.rs  db.rs  error.rs  main.rs  paddle.rs  sign.rs  state.rs  webhook_verify.rs
tools/license-server/src/routes/: health.rs  mod.rs  receipt.rs  refresh.rs  webhook.rs
tools/rustsec-probe/: Cargo.toml
tools/rustsec-probe/src/: main.rs
tools/sign-license/: Cargo.toml
tools/sign-license/src/: main.rs
(+59 files in other folders)
