[workspace]
members = ["crates/tirith-core", "crates/tirith", "tools/sign-license", "tools/license-server"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.83"

[workspace.dependencies]
tirith-core = { version = "0.2.3", path = "crates/tirith-core" }
clap = { version = "4", features = ["derive"] }
url = "2"
regex = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
once_cell = "1"
base64 = "0.22"
etcetera = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
fs2 = "0.4"
unicode-normalization = "0.1"
unicode-script = "0.5"
is-terminal = "0.4"
thiserror = "2"
clap_complete = "4"
clap_mangen = "0.2"
uuid = { version = "1", features = ["v4"] }
# Pin home <0.5.12 — v0.5.12 requires edition 2024 (Rust 1.85+), breaks MSRV 1.83
home = ">=0.5, <0.5.12"
# Pin time <0.3.38 — v0.3.38+ requires time-core >=0.1.3 which needs Rust 1.85+,
# and v0.3.46+ needs time-core 0.1.8 (Rust 1.88). Advisory RUSTSEC-2026-0009
# is ignored in deny.toml (tirith never parses user-controlled RFC 2822 dates).
time = ">=0.3, <0.3.38"
# Pin base64ct <1.8 — v1.8+ uses edition 2024 (Rust 1.85+), breaks MSRV 1.83.
# Transitive dep via ed25519-dalek → ed25519 → pkcs8 → spki → base64ct.
base64ct = ">=1, <1.8"
libc = "0.2"
lopdf = "0.34"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }

[profile.release]
lto = "thin"
strip = true
