[package]
name = "tirith-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal security analysis engine - homograph attacks, pipe-to-shell, ANSI injection"
repository = "https://github.com/sheeki03/tirith"
homepage = "https://github.com/sheeki03/tirith"
readme = "../../README.md"
keywords = ["security", "url", "analysis"]
categories = ["development-tools"]

[features]
# Off-by-default seam for artifact / member SHA-256 known-malicious lookups
# against the threat DB. The DB methods it calls (`check_artifact_sha256` /
# `check_file_sha256`) are the DB-B deliverable and DO NOT EXIST YET, so this
# milestone keeps the feature OFF and the emission behind a reserved seam that
# computes its indicator from a stub returning `false` (see
# `artifact::correlate::artifact_hash_indicator`). When DB-B lands, the stub body
# is replaced with the real lookup; the `ArtifactKnownMalicious` RuleId is already
# registered (so the registry tests see it) and the CLI flips this feature on.
# Building with `--features artifact-hash-lookup` compiles and tests cleanly
# today; it just never fires until the DB methods exist.
default = []
artifact-hash-lookup = []

[dependencies]
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
etcetera = { workspace = true }
home = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
unicode-normalization = { workspace = true }
unicode-script = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }
lopdf = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
toml = "0.8"
ed25519-dalek = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
csv = { workspace = true }
owo-colors = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
# B7 native binary triage. A vetted, pure-Rust, READ-ONLY object-format parser
# (gimli-rs/object), used to read ELF / fat (universal) Mach-O / PE+TLS section,
# symbol, import and init tables from a bounded in-memory buffer. Features are
# minimized to exactly the formats we triage: no `write`/`build` (we never emit
# objects), no `compression`/`archive`/`wasm`/`xcoff`. `pe` pulls `coff`. We
# enable `std` for the borrowed-data `read` API and `std::io::Error`. MSRV: the
# crate declares rust-version 1.65, under our workspace MSRV 1.83. Reviewed under
# the repo `cargo deny` gate (Apache-2.0 OR MIT, both allowlisted). This replaces
# hand-rolling ELF + fat Mach-O + PE/TLS parsing, which is a far larger
# malformed-input attack surface; `object` is widely fuzzed and read-only.
object = { version = "0.39", default-features = false, features = [
    "read_core",
    "elf",
    "macho",
    "pe",
    "std",
] }
arboard = { workspace = true }
# OS RNG for the per-install anomaly-baseline salt (M10 ch5). Tiny, OS-only
# entropy source; already present transitively. Used by `baseline::load_or_create_salt`.
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.9.2"

[[bench]]
name = "perf"
harness = false
