[package]
name = "tirith-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal security analysis engine - homograph attacks, pipe-to-shell, ANSI injection"
repository = "https://github.com/sheeki03/tirith"
homepage = "https://github.com/sheeki03/tirith"
readme = "../../README.md"
keywords = ["security", "url", "analysis"]
categories = ["development-tools"]

[features]
# Off-by-default seam for artifact / member SHA-256 known-malicious lookups
# against the threat DB. The DB methods it calls (`check_artifact_sha256` /
# `check_file_sha256`) are the DB-B deliverable and DO NOT EXIST YET, so this
# milestone keeps the feature OFF and the emission behind a reserved seam that
# computes its indicator from a stub returning `false` (see
# `artifact::correlate::artifact_hash_indicator`). When DB-B lands, the stub body
# is replaced with the real lookup; the `ArtifactKnownMalicious` RuleId is already
# registered (so the registry tests see it) and the CLI flips this feature on.
# Building with `--features artifact-hash-lookup` compiles and tests cleanly
# today; it just never fires until the DB methods exist.
default = []
artifact-hash-lookup = []
# native-yara (yara-x): DEFERRED by the PR-0 dependency spike, NOT wired here.
# The plan pencilled in `native-yara = ["dep:yara-x"]` with yara-x 0.14, but on the
# current registry yara-x 0.14 requires `intaglio >= 1.10`, and intaglio 1.10 (its
# lowest available release) bumped its MSRV to Rust 1.85. yara-x 0.14 also pulls
# `ar_archive_writer` (Rust 1.88) and a newer `time` (1.88) transitively. There is
# no version of the yara-x 0.14 closure that builds on our MSRV 1.83, so the
# feature and the `yara-x` dependency are intentionally omitted. The engine already
# treats an absent native-yara feature as `native_yara_rules: unavailable` (not
# "incomplete"), so this is a clean no-op. Revisit when the workspace MSRV rises to
# >= 1.85 or a yara-x line with a 1.83-compatible closure ships.

[dependencies]
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
etcetera = { workspace = true }
home = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
unicode-normalization = { workspace = true }
unicode-script = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }
lopdf = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
toml = "0.8"
ed25519-dalek = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
csv = { workspace = true }
owo-colors = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
# B7 native binary triage. A vetted, pure-Rust, READ-ONLY object-format parser
# (gimli-rs/object), used to read ELF / fat (universal) Mach-O / PE+TLS section,
# symbol, import and init tables from a bounded in-memory buffer. Features are
# minimized to exactly the formats we triage: no `write`/`build` (we never emit
# objects), no `compression`/`archive`/`wasm`/`xcoff`. `pe` pulls `coff`. We
# enable `std` for the borrowed-data `read` API and `std::io::Error`. MSRV: the
# crate declares rust-version 1.65, under our workspace MSRV 1.83. Reviewed under
# the repo `cargo deny` gate (Apache-2.0 OR MIT, both allowlisted). This replaces
# hand-rolling ELF + fat Mach-O + PE/TLS parsing, which is a far larger
# malformed-input attack surface; `object` is widely fuzzed and read-only.
object = { version = "0.39", default-features = false, features = [
    "read_core",
    "elf",
    "macho",
    "pe",
    "std",
] }
arboard = { workspace = true }
# OS RNG for the per-install anomaly-baseline salt (M10 ch5). Tiny, OS-only
# entropy source; already present transitively. Used by `baseline::load_or_create_salt`.
getrandom = "0.3"
# MCP message typing (Stack C). A serde-only schema crate for the Model Context
# Protocol — NO async runtime, NO tokio (rmcp was rejected for core precisely
# because it pulls tokio + Apache-only). `default-features = false` plus the single
# protocol-revision feature keeps the surface to serde structs we map known
# content onto, while unknown blocks are preserved losslessly by our own
# `PreservedContent::Unknown(serde_json::Value)` wrapper. Proven on MSRV 1.83 in
# the PR-0 dependency spike (crate MSRV 1.80). License MIT.
rust-mcp-schema = { version = "0.10", default-features = false, features = ["2025_11_25"] }
# JSON Schema validation for MCP inputSchema -> args and outputSchema ->
# result.structuredContent (Stack C). `default-features = false` is mandatory:
# the default feature set pulls `resolve-http` + `resolve-file` (HTTP and
# filesystem `$ref` resolution) and a TLS stack, none of which we want — schema
# refs must never trigger network or disk I/O. With defaults off the crate uses
# the `fancy-regex` engine for the `pattern` keyword. Crate MSRV is exactly 1.83
# (verified in the PR-0 spike); the consuming code (C2) bounds size/depth/branch/
# $ref/regex/cache/error. License MIT.
jsonschema = { version = "0.46", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Linux runtime-containment capsule backend (Stack E2). Landlock = unprivileged
# filesystem (and, on ABI v4 / Linux 6.7, port-level network) access control;
# extrasafe = an ergonomic seccomp-BPF policy builder (wraps seccompiler). Both
# are applied by the internal `tirith __capsule-child` launcher, NOT inside
# `pre_exec`. `cfg(target_os = "linux")`-gated so macOS / Windows targets compile
# without them. Proven to resolve + build on MSRV 1.83 across the linux-gnu target
# in the PR-0 spike. Licenses: landlock MIT/Apache-2.0, extrasafe MIT.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
extrasafe = "0.5"

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.9.2"

[[bench]]
name = "perf"
harness = false
