[package]
name = "tirith"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal security - catches homograph attacks, pipe-to-shell, ANSI injection"
repository = "https://github.com/sheeki03/tirith"
homepage = "https://github.com/sheeki03/tirith"
readme = "../../README.md"
keywords = ["security", "url", "shell", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "tirith"
path = "src/main.rs"

[[bin]]
name = "tirith-threatdb-compile"
path = "src/bin/tirith_threatdb_compile.rs"

[features]
# Pass-through to `tirith-core`'s off-by-default artifact / member hash
# known-malicious lookup seam (DB-gated; see tirith-core's `[features]`). Keeping
# the forwarding feature here means DB-D activation is one CLI flag, not a code
# change. OFF by default; building `tirith` with this on compiles and tests today.
default = []
artifact-hash-lookup = ["tirith-core/artifact-hash-lookup"]
# sigstore-attestations (sigstore-verify / -trust-root / -types): DEFERRED by the
# PR-0 dependency spike, NOT wired here. The modular sigstore crates DO exist at a
# consistent 0.9.0 line with the `rustls` feature the plan assumed (the earlier
# 0.1.x guess mis-resolved to stale 0.1.1 copies). However, sigstore-verify 0.9
# transitively requires reqwest 0.13, hyper-rustls 0.27, rustls-platform-verifier
# 0.7 and zeroize 1.9 — all of which require Rust >= 1.85 — and the closure is not
# pinnable down to MSRV 1.83. There is also no standalone `sigstore-attestations`
# crate (that functionality lives inside the umbrella `sigstore` crate). So the
# feature and its `dep:sigstore-*` deps are intentionally omitted. Stack F3 is an
# optional spike that only merges once it verifies a real PyPI fixture end to end;
# it gets wired when the workspace MSRV rises to >= 1.85. Until then, a missing or
# invalid attestation is treated as provenance evidence, never an auto-allow.

[dependencies]
tirith-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
is-terminal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
home = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
etcetera = { workspace = true }
url = { workspace = true }
tempfile = "3"
# `io-std` is added on top of the workspace feature set so `tirith lsp` can use
# `tokio::io::stdin()` / `stdout()` for the LSP stdio transport. tower-lsp's
# `runtime-tokio` feature enables the tokio crate but pins NO tokio features, so
# we must request `io-std` ourselves rather than rely on feature unification.
# `time` is added for the capsule egress broker's connect / handshake / idle
# timeouts (Stack E, `capsule_proxy.rs`); requested here for the same
# feature-unification reason as `io-std`.
tokio = { workspace = true, features = ["io-std", "time"] }
walkdir = { workspace = true }
csv = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
fs2 = { workspace = true }
# Drives a disposable shell through a real pseudo-terminal. Used by the bash
# enter-mode capability self-test (`cli::bash_capability`, run by `tirith
# setup` / `tirith doctor`) and by the PTY conformance harness in tests.
portable-pty = "0.9"
# Parses the embedded `tirith lab` corpus (assets/lab_corpus.toml).
toml = "0.8"
# Synchronous loopback HTTP server for `tirith dashboard serve` (M13 ch3).
# Bound to 127.0.0.1 ONLY; never exposed off-host.
tiny_http = { workspace = true }
# M14 (IDE Extensions) — `tirith lsp` runs a Language Server over stdio so an
# editor extension can surface tirith diagnostics inline. tower-lsp re-exports
# `lsp-types`; we use that re-export (`tower_lsp::lsp_types`) so the protocol
# types can never drift from the version tower-lsp was built against. Bin-crate
# only — tirith-core stays LSP-agnostic.
tower-lsp = "0.20"
# Capsule egress broker (Stack E, `capsule_proxy.rs`). A loopback-only CONNECT
# broker — NOT the security boundary — that the OS sandbox backend funnels
# outbound traffic through. hyper 1 + hyper-util + http-body-util give us an
# async HTTP/1 server for the broker loop on top of the tokio runtime that already
# lives in this crate (tirith-core stays async-free). All three proven on MSRV
# 1.83 in the PR-0 spike. Licenses: MIT.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
mockito = "1"
# Build synthetic wheels (ZIP archives) in the `package inspect` / `scan`
# artifact-inspection integration tests. Matches tirith-core's `zip` features.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Windows runtime-containment capsule backend (Stack E4): AppContainer profile +
# SID derivation, SECURITY_CAPABILITIES / PROC_THREAD_ATTRIBUTE / STARTUPINFOEXW
# CreateProcessW (create-suspended -> assign Job -> resume), Job Objects, and ACLs.
# `default-features = false` with an explicit minimal feature set keeps the binding
# surface to exactly the Win32 areas the backend calls. `cfg(windows)`-gated so
# non-Windows targets compile without it. Proven to resolve on MSRV 1.83 for the
# windows-msvc target in the PR-0 spike (crate MSRV 1.82). License MIT/Apache-2.0.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[package.metadata.deb]
maintainer = "Shivom Sharma <shivomsharma03@gmail.com>"
section = "utils"
depends = "ca-certificates"
# Paths relative to crates/tirith/ (NOT repo root)
assets = [
    ["target/release/tirith", "usr/bin/", "755"],
    # Shell hooks
    ["assets/shell/tirith.sh", "usr/share/tirith/shell/", "644"],
    ["assets/shell/lib/zsh-hook.zsh", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/bash-hook.bash", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/fish-hook.fish", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/powershell-hook.ps1", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/nushell-hook.nu", "usr/share/tirith/shell/lib/", "644"],
    # Completions (generated by CI before cargo-deb)
    ["assets/completions/tirith.bash", "usr/share/bash-completion/completions/", "644"],
    ["assets/completions/_tirith", "usr/share/zsh/site-functions/", "644"],
    ["assets/completions/tirith.fish", "usr/share/fish/vendor_completions.d/", "644"],
    # Man page (generated by CI before cargo-deb)
    ["assets/man/tirith.1", "usr/share/man/man1/", "644"],
]
