[package]
name = "tirith"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal security - catches homograph attacks, pipe-to-shell, ANSI injection"
repository = "https://github.com/sheeki03/tirith"
homepage = "https://github.com/sheeki03/tirith"
readme = "../../README.md"
keywords = ["security", "url", "shell", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "tirith"
path = "src/main.rs"

[[bin]]
name = "tirith-threatdb-compile"
path = "src/bin/tirith_threatdb_compile.rs"

[features]
# Pass-through to `tirith-core`'s off-by-default artifact / member hash
# known-malicious lookup seam (DB-gated; see tirith-core's `[features]`). Keeping
# the forwarding feature here means DB-D activation is one CLI flag, not a code
# change. OFF by default; building `tirith` with this on compiles and tests today.
default = []
artifact-hash-lookup = ["tirith-core/artifact-hash-lookup"]

[dependencies]
tirith-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
is-terminal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
home = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
etcetera = { workspace = true }
url = { workspace = true }
tempfile = "3"
# `io-std` is added on top of the workspace feature set so `tirith lsp` can use
# `tokio::io::stdin()` / `stdout()` for the LSP stdio transport. tower-lsp's
# `runtime-tokio` feature enables the tokio crate but pins NO tokio features, so
# we must request `io-std` ourselves rather than rely on feature unification.
tokio = { workspace = true, features = ["io-std"] }
walkdir = { workspace = true }
csv = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
fs2 = { workspace = true }
# Drives a disposable shell through a real pseudo-terminal. Used by the bash
# enter-mode capability self-test (`cli::bash_capability`, run by `tirith
# setup` / `tirith doctor`) and by the PTY conformance harness in tests.
portable-pty = "0.9"
# Parses the embedded `tirith lab` corpus (assets/lab_corpus.toml).
toml = "0.8"
# Synchronous loopback HTTP server for `tirith dashboard serve` (M13 ch3).
# Bound to 127.0.0.1 ONLY; never exposed off-host.
tiny_http = { workspace = true }
# M14 (IDE Extensions) — `tirith lsp` runs a Language Server over stdio so an
# editor extension can surface tirith diagnostics inline. tower-lsp re-exports
# `lsp-types`; we use that re-export (`tower_lsp::lsp_types`) so the protocol
# types can never drift from the version tower-lsp was built against. Bin-crate
# only — tirith-core stays LSP-agnostic.
tower-lsp = "0.20"

[dev-dependencies]
mockito = "1"
# Build synthetic wheels (ZIP archives) in the `package inspect` / `scan`
# artifact-inspection integration tests. Matches tirith-core's `zip` features.
zip = { version = "2", default-features = false, features = ["deflate"] }

[package.metadata.deb]
maintainer = "Shivom Sharma <shivomsharma03@gmail.com>"
section = "utils"
depends = "ca-certificates"
# Paths relative to crates/tirith/ (NOT repo root)
assets = [
    ["target/release/tirith", "usr/bin/", "755"],
    # Shell hooks
    ["assets/shell/tirith.sh", "usr/share/tirith/shell/", "644"],
    ["assets/shell/lib/zsh-hook.zsh", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/bash-hook.bash", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/fish-hook.fish", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/powershell-hook.ps1", "usr/share/tirith/shell/lib/", "644"],
    ["assets/shell/lib/nushell-hook.nu", "usr/share/tirith/shell/lib/", "644"],
    # Completions (generated by CI before cargo-deb)
    ["assets/completions/tirith.bash", "usr/share/bash-completion/completions/", "644"],
    ["assets/completions/_tirith", "usr/share/zsh/site-functions/", "644"],
    ["assets/completions/tirith.fish", "usr/share/fish/vendor_completions.d/", "644"],
    # Man page (generated by CI before cargo-deb)
    ["assets/man/tirith.1", "usr/share/man/man1/", "644"],
]
